--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,10 +4,11 @@ version = "0.1.0"
 description = ""
 authors = ["Lev Bazarnov <16255087+lbazarnov@users.noreply.github.com>"]
 readme = "README.md"
+repository = "https://github.com/lbazarnov/bitly-cli"
 packages = [{include = "bitly_cli"}]
 
 [tool.poetry.dependencies]
-python = "^3.10"
+python = "^3.8.1"
 requests = "^2.28.1"
 python-dotenv = "^0.21.0"
 prompt = "^0.4.1"
